--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 body {
     font-family: 'roboto', sans-serif;
     font-weight: 400;
+    padding: 5px;
 }
 
 .logo-witout-slogan {
@@ -15,7 +16,7 @@ header {
 
 .product-image-small {
     width: auto;
-    height: 300px;
+    height: 200px;
 }
 
 /* Navigation*/
@@ -63,6 +64,23 @@ header {
     font-family: 'roboto', sans-serif;
     color: #000;
     text-decoration: none;
+}
+
+.nav-back {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    
+}
+
+.nav-back a {
+    color:#000;
+    text-decoration: none;
+}
+
+.slash::before { 
+    content: '/';
+    margin: 3px 3px;
 }
 
 /* Footer */
@@ -158,6 +176,10 @@ section a {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.inspiration-content {
+    margin: 20px 0px;
 }
 
 /* Men's jackets page */
@@ -267,9 +289,11 @@ section a {
 
 .sort-and-relevance {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
     justify-content: flex-start;
     margin: 20px 0px;
+    padding: 0px;
 }
 
 .relevance {
@@ -287,6 +311,7 @@ section a {
     display: flex;
     flex-direction: column; 
     gap: 30px;
+    max-width: 1200px;
 }
 
 .product-info__image {
@@ -315,19 +340,45 @@ section a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: left;
+}
+
+.features {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.extra-product__info {
+    margin: 5px 0px 0px 0px;
+}
+
+.price-cart {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+.circle-size {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    border: #000 solid 1px;
+}
+
+.sizes {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 /* Cart page*/ 
-.discount-code {
-    font-family: 'roboto', sans-serif;
-    font-size: 1rem;
-    color: #000;
-    border-radius: 50px;
-    padding: 10px 50px;
-    text-decoration: none;
-    border: black solid 1px;
-}
-
 .product-image-cart {
     height: 200px;
 }
@@ -336,6 +387,7 @@ section a {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin: 0 auto;
 }
 
 .cart-image {
@@ -344,6 +396,16 @@ section a {
     align-items: center;
 }
 
+.discount-code-input {
+    font-family: 'roboto', sans-serif;
+    font-size: 1.25rem;
+    border:#000 solid 1px;
+    border-radius: 50px;
+    padding: 10px 10px;
+    gap: 10px;
+    margin: 20px 0px;
+    text-align: center;
+}
 
 
 /*Checkout page */
@@ -353,6 +415,21 @@ section a {
 .checkout-image {
     width: 100px;
     height: auto;
+}
+
+.checkout-form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+}
+
+.delivery-method,
+.payment-method,
+.terms {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 /* Confirmation page */
@@ -369,6 +446,36 @@ section a {
     font-size: 100px;
 }
 
+.confirmation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.order-summary {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    padding: 20px;
+}
+
+.order-details {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 20px;
+}
+
+.continue-shopping__button {
+    align-self: center;
+}
+
+.camping-image {
+    margin: 20px 0px;
+}
+
 /* Buttons */
 .see-more-button, .continue-shopping {
     font-family: 'roboto', sans-serif;
@@ -378,7 +485,9 @@ section a {
     border-radius: 50px;
     padding: 10px 50px;
     text-decoration: none;
-    border: none;
+    border: 1px solid #8cB8C3;
+    width: 200px;
+    text-align: center;
 }
 
 .add-to-cart-button, .checkout-button, .place-order-button {
@@ -387,13 +496,14 @@ section a {
     background-color: #0A3641;
     color: #fff;
     border-radius: 50px;
-    padding: 10px 50px;
+    padding: 10px 72px;
     text-decoration: none;
-    border: none;
+    border: 1px solid #0A3641;
+    text-align: center;
 }
 
 /* Tablet */
-@media (min-width: 725px) and (max-width: 1000px) {
+@media (min-width: 725px) and (max-width: 1060px) {
     .nav-links {
         display: flex;
         flex-direction: row;
@@ -487,11 +597,16 @@ section a {
         display: grid;
         grid-template-columns: 1fr 1fr;
     }
+
+    .extra-products {
+        display: grid;
+        grid-template-columns: auto auto auto;
+    }
     
 }
 
 /* Desktop */
-@media (min-width: 1001px) {
+@media (min-width: 1061px) {
     .nav-links {
         display: flex;
         flex-direction: row;
