--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
-
 body {
     font-family: 'roboto', sans-serif;
     font-weight: 400;
-    padding: 5px;
+    margin: 0px;
+}
+
+main {
+    margin: 0 auto;
+    max-width: 1400px;
 }
 
 .logo-witout-slogan {
@@ -17,6 +21,61 @@ header {
 .product-image-small {
     width: auto;
     height: 200px;
+}
+
+.product-image {
+    height: 350px;
+    display: block;
+}
+
+.price-cart {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.extra-products {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 30px 0px;
+}
+
+.extra-product__content {
+    justify-self: center;
+}
+
+.extra-product__info {
+    margin: 5px 0px 0px 0px;
+}
+
+.price-extra-product {
+    font-size: 1.125rem;
+    font-weight: 900;
+    margin-right: auto;
+}
+
+.checkout-image {
+    width: 100px;
+    height: auto;
+}
+
+.heart-checkbox {
+    display: none;
+}
+
+.heart-checkbox-icon::before {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 500;
+    content: '\f004';
+    cursor: pointer;
+}
+
+.heart-checkbox:checked + .heart-checkbox-icon::before {
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 700;
+    content: '\f004';
+    color: #E31646;
+    cursor: pointer;
 }
 
 /* Navigation*/
@@ -70,7 +129,6 @@ header {
     display: flex;
     align-items: center;
     gap: 5px;
-    
 }
 
 .nav-back a {
@@ -108,81 +166,7 @@ footer {
     display: none;
 }
 
-
-/* Homepage */
-.button-homepage-big {
-    font-family: 'oswald', sans-serif;
-    font-size: 1.875rem;
-    background-color: #0A3641;
-    color: white;
-    text-decoration: none;
-    padding: 5px 60px;
-    border-radius: 50px;
-    position: relative;
-    top: 510px;
-    left: 30px;
-    
-}
-
-.slogan {
-    color: white;
-    font-size: 4rem;
-    margin: 0;
-    text-align: right;
-    padding: 50px 102px 0px 0px;
-}
-
-.slogan-part-two {
-    padding: 10px 50px 0px 0px;
-}
-
-.button-homepage-small {
-    font-size: 0.875rem;
-    text-decoration: none;
-    border:#000 solid 1px;
-    padding: 5px 10px;
-    border-radius: 50px;
-}
-
-.inspo-text {
-    font-family: 'oswald', sans-serif;
-}
-
-section a {
-    font-family: 'roboto', sans-serif;
-    color: #000;
-}
-
-.welcome {
-    background-image: url('../images/skiing.jpg');
-    min-height: 800px;
-    background-size: cover;
-    background-position: right;
-    background-repeat: no-repeat;
-}
-
-.image-2 {
-    background-image: url('../images/hiking.jpg');
-    min-height: 400px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: white;
-}
-
-.image-3 {
-    background-image: url('../images/canoing.jpg');
-    min-height: 400px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.inspiration-content {
-    margin: 20px 0px;
-}
-
-/* Men's jackets page */
+/* Color circles*/
 .circle-blue,
 .circle-black,
 .circle-green,
@@ -255,226 +239,6 @@ section a {
     gap: 5px;
 }
 
-.product-image {
-    height: 380px;
-    display: block;
-}
-
-.product-title {
-    font-family: 'roboto', sans-serif;
-    display: block;
-    margin-bottom: 10px;
-    
-}
-
-.product-title a {
-    text-decoration: none;
-}
-
-.products__list {
-    display: grid;
-    grid-template-columns: repeat(1, minmax( 1fr));
-    justify-content: center;
-}
-
-.see-more__button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.see-more-button {
-    margin: 20px;
-}
-
-.sort-and-relevance {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: flex-start;
-    margin: 20px 0px;
-}
-
-.relevance {
-    margin-left: auto;
-}
-
-.sort {
-    padding: 5px 15px;
-    border: 1px solid black;
-    border-radius: 50px;
-}
-
-/* Product*/
-.product-info {
-    display: flex;
-    flex-direction: column; 
-    gap: 30px;
-    max-width: 1200px;
-}
-
-.product-info__image {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.product-info-image {
-    height: 450px;
-}
-
-.add-to-cart-button {
-    margin: 10px 0px;
-}
-
-.extra-products {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.extra-product__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: left;
-}
-
-.features {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-}
-
-.extra-product__info {
-    margin: 5px 0px 0px 0px;
-}
-
-.price-cart {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-}
-
-.circle-size {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    border: #000 solid 1px;
-}
-
-.sizes {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-
-/* Cart page*/ 
-.product-image-cart {
-    height: 200px;
-}
-
-.cart {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 0 auto;
-}
-
-.cart-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.discount-code-input {
-    font-family: 'roboto', sans-serif;
-    font-size: 1.25rem;
-    border:#000 solid 1px;
-    border-radius: 50px;
-    padding: 10px 10px;
-    gap: 10px;
-    margin: 20px 0px;
-    text-align: center;
-}
-
-
-/*Checkout page */
-.form__input {
-    display: block;
-}
-.checkout-image {
-    width: 100px;
-    height: auto;
-}
-
-.checkout-form {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 20px;
-}
-
-.delivery-method,
-.payment-method,
-.terms {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
-}
-
-/* Confirmation page */
-.camping-image {
-    background-image: url('../images/camping.jpg');
-    min-height: 400px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.confirmation-icon {
-    color: #8CB8C3;
-    font-size: 100px;
-}
-
-.confirmation {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-}
-
-.order-summary {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    padding: 20px;
-}
-
-.order-details {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 20px;
-}
-
-.continue-shopping__button {
-    align-self: center;
-}
-
-.camping-image {
-    margin: 20px 0px;
-}
-
 /* Buttons */
 .see-more-button, .continue-shopping {
     font-family: 'roboto', sans-serif;
@@ -499,215 +263,4 @@ section a {
     text-decoration: none;
     border: 1px solid #0A3641;
     text-align: center;
-}
-
-/* Tablet */
-@media (min-width: 725px) and (max-width: 1060px) {
-    .nav-links {
-        display: flex;
-        flex-direction: row;
-        position: static;
-        background: none;
-        align-items: center;
-        gap: 10px;
-    }
-
-    .hamburger-icon {
-        display: none;
-    }
-
-    .nav-links a {
-        display: inline-block;
-        margin-right: 10px;
-    }
-
-    .nav__content {
-        align-items: center;
-        padding: 0px;
-    }
-
-    .inspiration-content {
-        display: grid;
-        flex-direction: row;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-        padding: 20px 0px;
-    }
-
-    .footer__content{
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        text-align: left;
-        gap: 10px;
-    }
-    
-    .footer__content > div {
-        flex: 1;
-    }
-    
-    .logo-with-slogan {
-        width: 120px;
-        justify-self:center;
-        align-self: center;
-    }
-    
-    .footer__content h3,
-    .footer__content i {
-        margin-bottom: 10px;
-        text-align: left;
-    }
-    
-    .footer__content ul {
-        list-style-type: none;
-        padding:  0;
-        margin: 0;
-    }
-    
-    .footer__content li {
-        margin-bottom: 8px;
-    }
-
-    .footer__content ul li {
-        display: flex;
-    }
-    
-    .footer__content i {
-        margin-right: 10px;
-    }
-
-    .products__list {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-        grid-gap: 20px;
-    }
-
-    .product-info {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .cart {
-        display: grid;
-        grid-template-columns: 1fr auto;
-    }
-
-    .cart-items {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .extra-products {
-        display: grid;
-        grid-template-columns: auto auto auto;
-    }
-    
-}
-
-/* Desktop */
-@media (min-width: 1061px) {
-    .nav-links {
-        display: flex;
-        flex-direction: row;
-        position: static;
-        background: none;
-        align-items: center;
-        gap: 30px;
-    }
-
-    .hamburger-icon {
-        display: none;
-    }
-
-    .nav-links a {
-        display: inline-block;
-        margin-right: 20px;
-    }
-
-    .nav__content {
-        align-items: center;
-        padding: 0px;
-    }
-
-    .inspiration-content {
-        display: grid;
-        flex-direction: row;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-        padding: 20px 0px;
-    }
-
-    .footer__content{
-        display: flex;
-        flex-direction: row;
-        align-items: flex-start;
-        text-align: left;
-        gap: 30px;
-    }
-    
-    .footer__content > div {
-        flex: 1;
-    }
-    
-    .logo-with-slogan {
-        width: 120px;
-        justify-self:center;
-        align-self: center;
-    }
-    
-    .footer__content h3,
-    .footer__content i {
-        margin-bottom: 10px;
-        text-align: left;
-    }
-    
-    .footer__content ul {
-        list-style-type: none;
-        padding:  0;
-        margin: 0;
-    }
-    
-    .footer__content li {
-        margin-bottom: 8px;
-    }
-
-    .footer__content ul li {
-        display: flex;
-    }
-    
-    .footer__content i {
-        margin-right: 10px;
-    }
-
-    .products__list {
-        display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        grid-gap: 20px;
-    }
-
-    .product-info {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        gap: 40px;
-    }
-
-    .extra-products {
-        display: grid;
-        grid-template-columns: auto auto auto;
-    }
-
-   .product-info-image {
-    height: 600px;
-   }
-
-   .cart {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    }
-
-    .cart-items {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    }
-
 }
