--- a/css/cart.css
+++ b/css/cart.css
@@ -15,6 +15,15 @@
     align-items: center;
 }
 
+.items-in-cart,
+.order-summary {
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    padding: 8px;
+    border-radius: 10px;
+    margin: 10px auto;
+    max-width: 300px;
+}
+
 .discount-code-input {
     font-family: 'roboto', sans-serif;
     font-size: 1.25rem;
@@ -25,3 +34,28 @@
     margin: 20px 0px;
     text-align: center;
 }
+
+.checkout-discount__button {
+    display: grid;
+    align-self: center;
+}
+
+.order-summary {
+    background-color: rgba(190, 234, 245, 0.35);
+}
+
+.fa-trash {
+    margin-left: auto;
+}
+
+.counter__content {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.counter-input {
+    text-align: center;
+    padding: 3px;
+}
+
