--- a/css/checkout.css
+++ b/css/checkout.css
@@ -16,3 +16,27 @@
     flex-direction: row;
     gap: 10px;
 }
+
+.checkout__summary {
+    display: grid;
+    grid-template-rows: auto auto auto;
+    gap: 20px;
+    padding: 20px;
+    background-color: rgba(190, 234, 245, 0.35);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    margin: 40px 10px;
+    border-radius: 10px;
+    max-height: 500px;
+}
+
+.cart-items {
+    border: solid 1px black;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;;
+}
+
+.place-order {
+    align-self: center;
+    margin: 40px 0px 20px 0px;
+}
