--- a/css/confirmation.css
+++ b/css/confirmation.css
@@ -2,7 +2,8 @@
     background: url('../images/camping.jpg') center no-repeat;
     min-height: 400px;
     background-size: cover;
-    margin: 20px 0px;
+    margin: 30px auto;
+    max-width: 700px;
 }
 
 .confirmation-icon {
