--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,6 @@
     position: relative;
     top: 590px;
     left: 10px;
-    
 }
 
 .slogan {
@@ -67,5 +66,6 @@ section a {
 }
 
 .inspiration-content {
-    margin: 20px 0px;
+    margin: 20px auto;
+    max-width: 1400px;
 }
