--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,5 +1,7 @@
 .form__input {
     display: block;
+    padding: 5px;
+    margin: 5px 0px;
 }
 
 .checkout-form {
@@ -26,17 +28,27 @@
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
     margin: 40px 10px;
     border-radius: 10px;
-    max-height: 500px;
 }
 
 .cart-items {
     border: solid 1px black;
     align-items: center;
     background-color: white;
-    border-radius: 10px;;
+    border-radius: 10px;
+    padding: 10px;
 }
 
 .place-order {
     align-self: center;
     margin: 40px 0px 20px 0px;
+}
+
+.payment__info,
+.billing__info {
+    min-width: 220px;
+}
+
+.checkout__content {
+    max-width: 400px;
+    margin: 0 auto;
 }
