--- a/css/confirmation.css
+++ b/css/confirmation.css
@@ -37,7 +37,7 @@
 .continue-shopping__button {
     align-self: center;
     justify-self: center;
-    margin: 30px;
+    margin: 40px;
 }
 
 .confirmation__content {
@@ -48,6 +48,9 @@
     padding: 10px;
     margin: 5px auto;
     justify-items: center;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+    max-width: 800px;
+
 }
 
 .roboto__700 {
