--- a/css/checkout.css
+++ b/css/checkout.css
@@ -19,6 +19,11 @@
     gap: 10px;
 }
 
+.delivery-method,
+.payment-method {
+    margin: 5px 0px;
+}
+
 .creditcard-info {
     display: flex;
     flex-direction: column;
