--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,9 @@ header {
 }
 
 .coming-soon {
-    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-top: 100px;
     font-family: 'roboto', sans-serif;
     font-size: 1.25rem;
