--- a/css/checkout.css
+++ b/css/checkout.css
@@ -17,6 +17,11 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
+    align-items: center;
+}
+
+.creditcard {
+    align-self: flex-start;
 }
 
 .delivery-method,
