--- a/css/confirmation.css
+++ b/css/confirmation.css
@@ -62,12 +62,17 @@
     padding: 5px;
 }
 
-.order-heading {
-    font-size: 1.125rem;
-}
-
 .continue-shopping__confirmation {
     display: flex;
     justify-content: center;
 }
 
+.confirmation-summary {
+    display: flex;
+    justify-content: space-between;
+}
+
+.confirmation-heading {
+    font-size: 2.25rem;
+    margin: 30px 0px 5px 0px;
+}
