Added links to heart, user and magnifyer icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,7 +210,10 @@ header {
     list-style: none;
 }
 
-.fa-cart-shopping {
+.fa-cart-shopping,
+.fa-heart,
+.fa-user,
+.fa-magnifying-glass {
     color: #0A3641;
 }
 
