--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,13 @@ header {
 }
 
 .coming-soon-body {
+   display: flex;
+   flex-direction: column;
+   height: 100vh;
+}
+
+.coming-soon-main {
+    flex: 1;
     margin: 10px;
 }
 
