--- a/css/index.css
+++ b/css/index.css
@@ -1,80 +1,28 @@
-.button-homepage-big {
-    font-family: 'oswald', sans-serif;
-    font-size: 1.25rem;
-    background-color: #0A3641;
-    color: white;
+
+.product-title {
+    display: block;
+    margin-bottom: 10px;
+    font-size: 1.125rem;
+    font-weight: 900; 
+    color: black;
+}
+
+.price__product {
+    font-size: 1.125rem;
+    font-weight: 700;
+    margin-right: auto;
+    color: black;
     text-decoration: none;
-    padding: 5px 30px;
-    border-radius: 50px;
-    position: relative;
-    top: 590px;
-    left: 10px;
 }
 
-.slogan {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0;
-    text-align: right;
-    padding: 50px 102px 0px 0px;
-}
-
-.slogan-part-two {
-    padding: 10px 50px 0px 0px;
-}
-
-.button-homepage-small {
-    font-size: 0.875rem;
+ a {
     text-decoration: none;
-    background-color: #8cB8C3;
-    padding: 5px 10px;
-    border-radius: 50px;
 }
 
-.inspo-text {
-    font-family: 'oswald', sans-serif;
-    padding: 5px;
-    text-transform: uppercase;
+.products__list {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-content: center;
+    gap: 50px;
+    margin: 20px;
 }
-
-section a {
-    font-family: 'roboto', sans-serif;
-    color: #000;
-}
-
-.welcome {
-    background-image: url('../images/skiing.jpg');
-    min-height: 800px;
-    background-size: cover;
-    background-position: right;
-    background-repeat: no-repeat;
-}
-
-.image-2 {
-    background-image: url('../images/hiking.jpg');
-    min-height: 400px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: white;
-}
-
-.image-3 {
-    background-image: url('../images/canoing.jpg');
-    min-height: 400px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-.inspiration-content {
-    margin: 30px auto;
-    max-width: 1400px;
-    padding: 10px 10px;
-}
-
-.welcome,
-.image-2 {
-    background-color: #0A3641;
-}
-
