--- a/css/product.css
+++ b/css/product.css
@@ -8,15 +8,25 @@
     border-bottom: solid 1px black;
 }
 
-.product-info__image {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.product {
+    padding: 20px 20px;
 }
 
 .product-info-image {
-    height: 400px;
+    width: auto;
+    max-height: 400px;
+}
+
+.backButton {
+    font-family: 'roboto', sans-serif;
+    font-size: 1rem;
+    background-color: #8CB8C3;
+    color: #000;
+    border-radius: 50px;
+    padding: 10px 50px;
+    text-decoration: none;
+    border: 1px solid #8cB8C3;
+    text-align: center;
 }
 
 .add-to-cart-button {
