--- a/css/index.css
+++ b/css/index.css
@@ -26,3 +26,10 @@
     gap: 50px;
     margin: 20px;
 }
+
+#genderFilter {
+    margin: 20px;
+    padding: 5px 20px;
+    font-size: 1rem;
+    border-radius: 50px;
+}
