--- a/css/checkout.css
+++ b/css/checkout.css
@@ -1,3 +1,18 @@
+.cart-product-image {
+    width: 80px;
+    height: auto;
+    object-fit: cover;
+}
+
+.cart-item {
+    display: flex;
+    gap: 20px;
+    border: 1px solid black;
+    border-radius: 5px;
+    align-items: center;
+    padding: 10px;
+}
+
 .form__input {
     display: block;
     padding: 5px;
