--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 .product-title {
     display: block;
     margin-bottom: 10px;
@@ -19,12 +18,28 @@
     text-decoration: none;
 }
 
+.product {
+    background-color: white;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.75);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    width: 300px;
+    padding: 10px;
+}
+
+.product:hover {
+    transform: scale(1.05);
+}
+
 .products__list {
+    max-width: 1200px;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
     justify-content: center;
     gap: 50px;
-    margin: 20px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 #genderFilter {
