--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,8 @@ main {
     padding: 10px;
     border: 1px solid #ff0000;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin: 10px;
+    width: 90%;
 }
 
 header {
