--- a/css/checkout.css
+++ b/css/checkout.css
@@ -23,6 +23,50 @@
     width: 100px;
 }
 
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 60vh;
+}
+
+main {
+    flex: 1;
+}
+
+.remove-button, 
+.clear-cart-button {
+    font-family: 'roboto', sans-serif;
+    font-size: 0.8rem;
+    background-color: #8CB8C3;
+    color: #000;
+    border-radius: 50px;
+    padding: 5px 20px;
+    text-decoration: none;
+    border: 1px solid #0A3641;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+}
+
+.quantity-button {
+    font-family: 'roboto', sans-serif;
+    font-size: 1rem;
+    background-color: #fff;
+    color: #000;
+    border-radius: 50px;
+    padding: 5px 11px;
+    text-decoration: none;
+    border: 1px solid #0A3641;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+}
+
 
 
 
