--- a/css/styles.css
+++ b/css/styles.css
@@ -40,12 +40,20 @@ main {
 
 .alert-box {
     display: none;
-    background-color: #ffe0e0;
     padding: 10px;
-    border: 1px solid #ff0000;
     border-radius: 5px;
     margin: 10px;
     width: 90%;
+}
+
+.alert-error {
+    background-color: #ffe0e0;
+    border: 1px solid #ff0000;
+}
+
+.alert-success {
+    background-color: #e0ffe0;
+    border: 1px solid #00cc00;
 }
 
 header {
