--- a/css/checkout.css
+++ b/css/checkout.css
@@ -37,8 +37,7 @@ body, html {
 main {
     flex: 1;
 }
-
-.remove-button, 
+ 
 .clear-cart-button {
     font-family: 'roboto', sans-serif;
     font-size: 0.8rem;
@@ -51,6 +50,7 @@ main {
     text-align: center;
     cursor: pointer;
     display: inline-block;
+    width: fit-content;
 }
 
 .quantity-button {
@@ -65,6 +65,32 @@ main {
     text-align: center;
     cursor: pointer;
     display: inline-block;
+}
+
+.update-cart-quantity {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-left: auto;
+}
+
+.cart-product-title {
+    font-size: 1.125rem;
+}
+
+.total-price {
+    font-size: 1.25rem;
+    font-weight: 700;
+    border-bottom: 2px solid #000000;
+    width: fit-content;
+    padding-bottom: 2px;
+}
+
+.checkout-content {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 40px auto;
 }
 
 
